Fix extra boldness on Firefox
* Changed headings to normal font weight
* Adjusted size and spacing for site title so that it is the same width
  as the tagline

--- a/assets/css/_stylus/arrow.styl
+++ b/assets/css/_stylus/arrow.styl
@@ -14,6 +14,9 @@ body
 	max-width 600px
 	padding 0 20px
 
+h1, h2, h3, h4, h5, h6
+	font-weight normal
+
 a
 	text-decoration none
 	transition color 0.2s ease
@@ -63,11 +66,10 @@ body > header
 	text-transform uppercase
 
 	h1
-		font-size 24px
-		letter-spacing -1px
+		font-size 25px
 		line-height 1
 		margin 50px 0 0
-		word-spacing 0.25em
+		word-spacing 0.15em
 
 		i
 			font-size 1.63em
